clusters/k3s-cluster/apps/devpi/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devpi
  labels:
    name: devpi
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: latest
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: latest
