clusters/k3s-cluster/apps/devpi/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devpi
  namespace: devpi
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: devpi
  template:
    metadata:
      labels:
        app: devpi
    spec:
      nodeSelector:
        node-role.apps: "true"
      securityContext:
        runAsUser: 1000
        fsGroup: 1000
      containers:
        - name: devpi-server
          image: harbor.theedgeworks.ai/base/devpi:v0.4.0
          imagePullPolicy: Always
          ports:
            - containerPort: 3141
              name: http
          readinessProbe:
            httpGet:
              path: /+api
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /+api
              port: http
            initialDelaySeconds: 30
            periodSeconds: 30
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              cpu: 500m
              memory: 2Gi
          volumeMounts:
            - name: devpi-data
              mountPath: /devpi/server
      volumes:
        - name: devpi-data
          persistentVolumeClaim:
            claimName: devpi-data
