clusters/k3s-cluster/apps/devpi/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devpi
  namespace: devpi
spec:
  selector:
    app: devpi
  ports:
    - port: 3141
      targetPort: 3141
      name: http
